--- a/package.json
+++ b/package.json
@@ -13,9 +13,16 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.29.2",
+    "@web3modal/wagmi": "^4.1.10",
     "next": "14.2.2",
+    "next-themes": "^0.2.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.1.0",
+    "viem": "^2.9.23",
+    "wagmi": "^2.5.20"
   },
   "devDependencies": {
     "@types/node": "^20",
