--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@web3modal/wagmi": "^4.1.10",
     "next": "14.2.2",
     "next-themes": "^0.2.1",
+    "nft.storage": "^7.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
