--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@pinata/sdk": "^2.1.0",
     "@tanstack/react-query": "^5.29.2",
     "@web3modal/wagmi": "^4.1.10",
     "next": "14.2.2",
